# ModularDecomposition_v4

./: CMakeLists.txt  Graph.txt  README.md
ModularDecomposition_v4/: Graph.cpp  Graph.h  MD_Tree.cpp  MD_Tree.h  ModularDecomposition.cpp  TreeList.cpp  TreeList.h  Util.cpp  Util.h
